# hanhan_SignatureWork

./: .gitignore  Energy100_20240630_20251001.xlsx  Financials100_20240630_20251001.xlsx  IT100_20240630_20251001.xlsx  Industrials100_20240630_20251001.xlsx  README.md  backtest_2025Q1_daily.csv  backtest_2025Q2_daily.csv  backtest_ensemble_v6.py  cd100_20240630_20251001.xlsx  cd_sample100.xlsx  data_preprocess.py  energy_sample100.xlsx  fed_fetch.py  fed_news_20240630_20250701.csv  fed_news_20240630_20250701.json  fed_news_20240630_20251001.csv  fed_news_20240630_20251001.json  fed_news_20240630_20251001_with_content.csv  fed_rate_events_2024_2025.csv  fed_sentiment_articles.csv  fed_sentiment_daily.csv  financials_sample100.xlsx  industrials_sample100.xlsx  it_sample100.xlsx  main.py  model_summary_metrics.csv  panel_summary.py  pyproject.toml  sector_quadrant_table_en.csv  train_boost_compare_v1.py  train_ensemble_v5.py  train_ensemble_v5_error_analysis.py  train_logistic_compare_v1.py  train_lstm_compare_v1.py  train_xgb_compare_v1.py  training_model_prep.py  信息技术100、 (1).xlsx  可选消费100 (1).xlsx  工业100 (1).xlsx  (+4 more)
script/: train_finbert_sentiment.py
test/: test_env.py
