[project]
name = "hanhan-signaturework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0.1",
    "protobuf>=6.33.5",
    "sentencepiece>=0.2.1",
    "torch>=2.10.0",
    "tqdm>=4.67.0",
    "transformers>=5.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
